--- a/Accueil.html
+++ b/Accueil.html
@@ -3,7 +3,7 @@
     <head>
      <meta charset="utf-8"/>
      <Title>La Maison</Title>
-     <link rel="stylesheet" href="/Accueil.css">   
+     <link rel="stylesheet" href="https://github.com/XavierMartineau/School_Project/blob/main/Accueil.css">   
     </head>
 
     <body>
